api: rest: Fix swagger doc of import APIs
