# server/pkg/api/rest/docs/swagger.json
@@ -299,6 +299,15 @@
                     "[Import] ImportInfra"
                 ],
                 "summary": "Import Infra",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "UUID of the connectionInfo",
+                        "name": "uuid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successfully saved the infra information",
@@ -334,6 +343,15 @@
                     "[Import] ImportSoftware"
                 ],
                 "summary": "Import software",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "UUID of the connectionInfo",
+                        "name": "uuid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successfully saved the software information",
